flux/apps/base/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
spec:
  selector:
    app.kubernetes.io/name: unifi
  ports:
    - name: unifi
      port: 8443
      targetPort: 8443
      protocol: TCP
